--- a/index.html
+++ b/index.html
@@ -26,9 +26,9 @@
 
       createUnityInstance(document.querySelector("#unity-canvas"), {
         arguments: [],
-        dataUrl: "Build/TAMM.data.br",
-        frameworkUrl: "Build/TAMM.framework.js.br",
-        codeUrl: "Build/TAMM.wasm.br",
+        dataUrl: "Build/TAMM.data.gz",
+        frameworkUrl: "Build/TAMM.framework.js.gz",
+        codeUrl: "Build/TAMM.wasm.gz",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "DefaultCompany",
         productName: "TAMM_GITEX_CALL POD",
