--- a/index.html
+++ b/index.html
@@ -55,9 +55,9 @@
       var loaderUrl = buildUrl + "/TAMM.loader.js";
       var config = {
         arguments: [],
-        dataUrl: buildUrl + "/TAMM.data.gz",
-        frameworkUrl: buildUrl + "/TAMM.framework.js.gz",
-        codeUrl: buildUrl + "/TAMM.wasm.gz",
+        dataUrl: buildUrl + "/TAMM.data",
+        frameworkUrl: buildUrl + "/TAMM.framework.js",
+        codeUrl: buildUrl + "/TAMM.wasm",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "DefaultCompany",
         productName: "TAMM_GITEX_CALL POD",
